Setup GitHub Pages documentation
- Configure GitHub Pages with Jekyll theme and proper metadata
- Add GitHub Actions workflow for automatic deployment
- Create comprehensive documentation in both HTML and Markdown formats
- Update main README with documentation website link
- Configure proper repository URLs and settings for GitHub Pages
- Documentation will be available at https://lucascluz.github.io/memora

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,15 @@
 theme: jekyll-theme-minimal
 title: Memora Documentation
 description: A simple, fast, and efficient distributed cache store built in Go
+url: "https://lucascluz.github.io"
+baseurl: "/memora"
+repository: "Lucascluz/memora"
+author:
+  name: "Lucas"
+  email: "lucas.carvalho.da.luz12@gmail.com"
+github_username: Lucascluz
+markdown: kramdown
+highlighter: rouge
+plugins:
+  - jekyll-github-metadata
+  - jekyll-sitemap
