Remove GitHub Pages setup verification document and fix URL casing in config

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Memora Documentation
 description: A simple, fast, and efficient distributed cache store built in Go
-url: "https://lucascluz.github.io"
+url: "https://Lucascluz.github.io"
 baseurl: "/memora"
 repository: "Lucascluz/memora"
 author:
